# rocketry

./: .gitignore  .gitmodules  404.html  CNAME  DEVELOPMENT.md  LICENSE  LICENSE.html  README.md  development.md  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: devlog.yml  docs.yml
avionics/: index.html  viper.html
avionics/oxide/: Cargo.toml  justfile
avionics/oxide/src/: main.rs
avionics/viper/: .clang-format  .gitignore  2020-11-03-perfection.html  Cargo.toml  build.py  cargo_build.py  index.html  justfile  platformio.ini  viper.code-workspace
avionics/viper/.cargo/: config
avionics/viper/arduino/: Cargo.toml
avionics/viper/arduino/src/: gpio.rs  lib.rs  sound.rs
avionics/viper/include/: interop.h  pins.h  tones.h
avionics/viper/include/interop/: cpp.h
avionics/viper/lib/arduino/src/: gpio.rs  lib.rs  serial.rs  sound.rs
avionics/viper/lib/oxide/: .gitignore  Cargo.toml  build.rs  cbindgen.toml
avionics/viper/lib/oxide/src/: avionics.rs  constants.rs  ffi.rs  interface.rs  lib.rs  sensor_data.rs  ui.rs  vector.rs
avionics/viper/lib/oxide/src/interop/: cpp.rs  mod.rs  rust.rs
avionics/viper/scripts/: build.py
avionics/viper/src/: consts.rs  interop.cpp  lib.rs  main.cpp  tones.cpp  ui.rs
avionics/viper/src/interop/: bno055.cpp  bno055.rs  mod.rs
avionics/viper_old/: platformio.ini
avionics/viper_old/include/interop/: rust.h
avionics/viper_old/lib/oxide/src/: avionics.rs  lib.rs  ui.rs
avionics/viper_old/lib/oxide/src/interop/: cpp.rs
avionics/viper_old/scripts/: start_plotter.py
avionics/viper_old/src/interop/: cpp.cpp  rust.cpp
devlog/: book.toml
devlog/src/: SUMMARY.md  index.md
devlog/src/avionics/: index.md  viper.md
devlog/src/avionics/viper/: 2020-11-03-perfection.md  index.md
devlog/src/rockets/: index.md  slider.md
devlog/src/rockets/slider/: 2020-08-13-parachute.md  2020-10-25-tvc.md  index.md
docs/: CNAME  _config.yml  development.md
firmware/oxide/: Cargo.toml
firmware/viper/: .clang-format
firmware/viper/include/: pins.h
firmware/viper/src/: main.cpp  tones.cpp
public/: 404.md  CNAME  _config.yml
rockets/: index.html  slider.html
rockets/models/slider/: rocket.FCStd  rocket.FCStd1  slider.FCStd  slider.FCStd1
rockets/models/slider/renders/: Nose Cone.stl
rockets/models/slider/sim/: slider.ork
rockets/models/slider/stl/: Nose Cone.stl  Parachute Holder.stl
rockets/slider/: 2020-08-13-parachute.html  2020-10-25-tvc.html  Rocket Rough.ork  index.html  slider.FCStd  slider.FCStd1
rockets/slider/freecad/: slider_tvc_assembly.FCStd  slider_tvc_assembly.FCStd1
rockets/slider/freecad/renders/: Center Gimbal.stl  Middle Gimbal.stl  Nose Cone.stl  Parachute Holding.stl
rockets/slider/freecad/slice/: Full TVC Mount.3mf
rockets/slider/kicad/: .gitignore  _autosave-slider.sch  fp-info-cache  fp-lib-table  slider-cache.lib  slider.bck  slider.dcm  slider.kicad_pcb  slider.kicad_pcb-bak  slider.lib  slider.net  slider.pro  slider.sch  slider.sch-bak  sym-lib-table
rockets/slider/kicad/slider.3dshapes/: Adafruit_BMP280_STEMMA_QT.wrl  Adafruit_BNO055_STEMMA_QT.wrl  Adafruit_I2C_FRAM.wrl
rockets/slider/kicad/slider.pretty/: Adafruit-BMP280.kicad_mod  Adafruit-BNO055.kicad_mod  Adafruit-MB85RC256V.kicad_mod  CE-C75-Piezo-Alarm.kicad_mod
rockets/slider/renders/: Center Gimbal.stl  Middle Gimbal.stl  Nose Cone.stl  Outer Gimbal.stl  Parachute Holder.stl
