[package]
edition = "2018"
readme = "README.md"
name = "viper"
version = "0.2.0"

[lib]
name = "firmware"
crate-type = ["staticlib"]

[dependencies]
compiler_builtins = { version = "*", features = ["mangled-names"] }
arduino = { path = "./lib/arduino" }

[workspace]
members = ["lib/arduino"]

[profile.release]
codegen-units = 1 # better optimizations
debug = false # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
