[package]
edition = "2018"
readme = "README.md"
name = "viper"
version = "0.2.0"

[lib]
name = "firmware"
crate-type = ["staticlib"]
test = false

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.11"
nalgebra = { version = "0.22.0", default-features = false }
teensyduino = { path = "./lib/teensyduino" }
spin = "0.5.2"

[workspace]
members = ["lib/teensyduino"]

[profile.release]
codegen-units = 1 # better optimizations
debug = false # symbols are nice and they don't increase the size on Flash
lto = true # better optimization
