[package]
name = "viper_oxide"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler_builtins = { version = "*", features = ["mangled-names"] }

[build-dependencies]
cbindgen = "0.14.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lib]
crate-type = ["staticlib"]